<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_remain"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/wallet_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="154548"
            android:textColor="@color/colorBlack"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_yuan"
            android:textColor="@color/colorBlack"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/login"
        style="@style/normal_tv_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/textview_stroke_btn"
        android:text="@string/wallet_get"
        android:textColor="@color/colorButton"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wallet_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="下次体现的日期"
        android:textColor="@color/colorTexthintGrey2"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/wallet_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wallet_rule"
        android:textColor="@color/colorButton"
        android:textSize="12sp" />


</LinearLayout>