<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ver="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <include layout="@layout/layout_title" />

    <TextView
        android:id="@+id/update_next"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textview_normal_btn"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        style="@style/normal_tv_btn"/>


    <EditText
        android:id="@+id/update_phone"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:drawableBottom="@drawable/editview_line"
        android:hint="@string/login_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1" />


    <com.dalimao.corelibrary.VerificationCodeInput
        android:id="@+id/update_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:drawableBottom="@drawable/editview_line"
        ver:child_h_padding="5dp" />

    <TextView
        android:id="@+id/update_getcode"
        style="@style/normal_tv_btn"
        android:layout_below="@+id/update_code"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/textview_stroke_btn"
        android:text="@string/getcode"
        android:textColor="@color/colorButton" />


</RelativeLayout>