<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/price_bg"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            style="@style/setting_item_configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:text="@string/my_update_phone"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/price_bg">

            <TextView
                android:id="@+id/update_phone_label1"
                style="@style/setting_item_configure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:text="@string/phone_number"
                android:textColor="@color/colorTexthintGrey2" />

            <ImageButton
                android:id="@+id/phone_clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/quxiao22" />

            <EditText
                android:id="@+id/phnoe_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/phone_clear"
                android:layout_toRightOf="@id/update_phone_label1"
                android:background="@null"
                android:inputType="phone"
                android:textColor="@color/colorTexthintGrey"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@color/colorTextLineGrey"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/price_bg">

            <TextView
                android:id="@+id/update_phone_label2"
                style="@style/setting_item_configure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="0dp"
                android:text="@string/code"
                android:textColor="@color/colorTexthintGrey2" />


            <TextView
                android:id="@+id/phone_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/textview_normal_btn"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/getcode"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/phone_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/phone_get"
                android:layout_toRightOf="@id/update_phone_label2"
                android:background="@null"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/colorTexthintGrey"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/phone_do"
        style="@style/normal_tv_btn"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/textview_normal_btn"
        android:text="@string/update_phone_do"
        android:textColor="@color/colorWhite" />
</LinearLayout>