<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/price_bg"
    android:orientation="vertical"
    android:padding="12dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/undone_time"
            style="@style/setting_item_configure"
            android:layout_marginStart="0dp"
            android:text="@string/undone_time" />

        <TextView
            android:id="@+id/undone_status"
            style="@style/setting_item_configure"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:text="@string/mine_daifukuan"
            android:textColor="@color/colorTextRed" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_margin="10dp"
        android:background="@color/colorTextLineGrey"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/undone_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/undone_number"
                style="@style/setting_item_configure"
                android:layout_marginStart="4dp"
                android:text="3"
                android:textColor="@color/colorTextRed"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/undone_freight"
                style="@style/setting_item_configure"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4dp"
                android:text="运费"
                android:textColor="@color/colorTexthintGrey2"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/undone_price"
                style="@style/setting_item_configure"
                android:layout_marginStart="4dp"
                android:layout_toLeftOf="@id/undone_freight"
                android:text="151"
                android:textColor="@color/colorTextRed"
                android:textSize="13sp" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_margin="10dp"
        android:background="@color/colorTextLineGrey"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/undone_take"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/textview_stroke_btn"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="@string/undone_take"
            android:textColor="@color/colorButton" />

        <TextView
            android:id="@+id/undone_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/undone_take"
            android:background="@drawable/textview_gray_btn"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="@string/undone_refund"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>
</LinearLayout>